# Grape

./: Cargo.toml  Error bug to fix  README.md
docs/: docs.md
src/: config.rs  eq.rs  library.rs  main.rs  mock_catalog.rs  player.rs  playlist.rs  src.md
src/ui/: app.rs  message.rs  mod.rs  state.rs  style.rs
src/ui/components/: albums_grid.rs  anchored_overlay.rs  artists_panel.rs  audio_settings.rs  folders_panel.rs  genres_panel.rs  mod.rs  player_bar.rs  playlist_panel.rs  playlist_view.rs  queue_view.rs  seek_area.rs  songs_panel.rs  stack.rs
tasks/: tasks.md  ui_analysis.md
tasks/roadmap/: roadmap.md
