[package]
name = "grape"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.12", features = ["advanced", "image"] }
lofty = "0.20"
rodio = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
rfd = "0.14"

[dev-dependencies]
tempfile = "3"
