[package]
name = "grape"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14", features = ["advanced", "image", "tokio"] }
lofty = "0.22"
rodio = "0.21"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
rfd = "0.16"
unicode-normalization = "0.1.24"

[dev-dependencies]
tempfile = "3.24.0"

[features]
crisp = []
